Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-11-19 Gal
 PATCH: [ 1590831 ] Handle minimize argument (Bug 1570351)
  Src/Common: SplitterWndEx.cpp
  Src: Merge.cpp MergeArgs.cpp MergeDiffDetailView.cpp

2006-11-13 Gal
 BUG: [ 1594188 ] /x option does not work
  Src: MergeDoc.cpp

2006-11-06 Takashi
 PATCH: [ 1586705 ] DirView icons (Tim made [not]equalfile.ico)
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-03 Kimmo
 PATCH: [ 1589438 ] Add read-only info to ProjectFile dialog
  Src: MainFrm.cpp
2006-11-03 Tim
 PATCH: [ 1589601 ] Add "ReDim" keyword to Visual Basic highlighter
  Src\editlib: basic.cpp

2006-11-02 Kimmo
 PATCH: [ 1588212 ] Add manifest file to resource file
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
  Move files from Installer/InnoSetup: WinMerge.exe.manifest WinMergeU.exe.manifest
   to Src/res

2006-10-31 Kimmo
 PATCH: [ 1586869 ] Fix File Select -dialog modality
  Src: DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp Merge.h
   MergeDoc.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp PropRegistry.cpp PropVss.cpp
  Src/Common: PreferencesDlg.cpp
 PATCH: [ 1578494 ] 26Branch: Optimize binary files compare
  Src: DiffFileData.cpp DiffItem.h

2006-10-29 Kimmo
 PATCH: [ 1578419 ] Fix creating WinMerge folder to MyFolders always
  Src: MainFrm.cpp MainFrm.h

2006-10-24 Tim
 PATCH: [ 1584004 ] Delete "Toolbar.bmp"
  Src/res deleted file: Toolbar.bmp

2006-10-12 2.6.0 Stable Release (R3712)

2006-10-12 Kimmo
 Fix building catalan language file
  Src/Languages/Catalan: MergeCatalan.rc

2006-10-11 Kimmo
 PATCH: [ 1574696 ] Fix problem in saving filefilter to project file
  Src: ProjectFilePathsDlg.cpp

2006-10-10 Takashi
 BUG: [ 1573240 ] Crash in subversion trunk
  Src: MainFrm.cpp MainFrm.h OptionsInit.cpp

2006-10-09 Takashi
 BUG: [ 1570259 ] Bookmarks GUI get reset after save
  Src/editlib: ccrystaltextview.cpp

2006-10-08 Takashi