@@ -23,42 +23,45 @@
 // $Id$
 
 #include "stdafx.h"
+#include <sys/types.h>
+#include <sys/stat.h>
 #include "FileInfo.h"
-
-/**
- * @brief Convert a FILETIME to a long (standard time)
- */
-static __int64 FileTimeToInt64(FILETIME & ft)
-{
-	return CTime(ft).GetTime();
-}
 
 /**
  * @brief Update fileinfo from given file
  * @param [in] sFilePath Full path to file/directory to update
+ * @return TRUE if information was updated (item was found).
  */
-void FileInfo::Update(CString sFilePath)
+BOOL FileInfo::Update(CString sFilePath)
 {
-	// CFileFind doesn't expose the attributes
-	// CFileStatus doesn't expose 64 bit size
-
-	WIN32_FIND_DATA wfd;
-	HANDLE h = FindFirstFile(sFilePath, &wfd);
+	struct _stati64 fstats;
 	__int64 mtime64 = 0;
+	BOOL retVal = FALSE;
+
 	size = -1;
 	flags.reset();
 	mtime = 0;
-	if (h != INVALID_HANDLE_VALUE)
-	{
-		mtime64 = FileTimeToInt64(wfd.ftLastWriteTime);
-		flags.attributes = wfd.dwFileAttributes;
 
-		// No size for directory ( size remains as -1)$
+	if (_tstati64(sFilePath, &fstats) == 0)
+	{
+		// There can be files without modification date.
+		// Then we must use creation date. Of course we assume
+		// creation date then exists...
+		if (fstats.st_mtime == 0)
+			mtime64 = fstats.st_ctime;
+		else
+			mtime64 = fstats.st_mtime;
+
+		flags.attributes = GetFileAttributes(sFilePath);
+
+		// No size for directory ( size remains as -1)
 		if ((flags.attributes & FILE_ATTRIBUTE_DIRECTORY) == 0)
-			size = FileInfo::GetSizeFromFindData(wfd);
-		FindClose(h);
+			size = fstats.st_size;
+
+		retVal = TRUE;
 	}
 	mtime = mtime64;
+	return retVal;
 }
 
 /**
@@ -71,29 +74,4 @@ void FileInfo::Clear()
 	size = -1;
 	version.Empty();
 	flags.reset();
-}
-
-/**
- * @brief Returns 64-bit filesize from Windows Find Data.
- * This function calculates 64-bit filesize from given find-data where
- * filesize is in two variables.
- * @param [in] findData Find-data to get filesize.
- * @return 64-bit filesize.
- */
-__int64 FileInfo::GetSizeFromFindData(const WIN32_FIND_DATA & findData)
-{
-	__int64 tmpSize = 0;
-	// Get file's size. If more than 31 bits is needed then we need to
-	// calculate full 64 bits. Since size is signed variable.
-	if (findData.nFileSizeHigh > 0 || findData.nFileSizeLow > INT_MAX)
-	{
-		tmpSize = findData.nFileSizeHigh;
-		tmpSize = tmpSize << 32;
-		tmpSize += findData.nFileSizeLow;
-	}
-	else
-	{
-		tmpSize = findData.nFileSizeLow;
-	}
-	return tmpSize;
 }
