@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-11-21 Kimmo
+ PATCH: [ 1589563 ] Fix crash with weird filetimes (and cleanup the code)
+  Src: DiffFileInfo.cpp DiffFileInfo.h DirScan.cpp DirViewColHandler.cpp
+   FileInfo.cpp FileInfo.h
+
 2006-11-19 Gal
  PATCH: [ 1590831 ] Handle minimize argument (Bug 1570351)
   Src/Common: SplitterWndEx.cpp
